--- a/css/pvx/book/list.less
+++ b/css/pvx/book/list.less
@@ -44,7 +44,7 @@
 
 .w-listfilter-list .u-sort{.none;}
 
-.ua-responsive .screen-s {
+.ua-mobile,.screen-s {
 	.m-book-list li{
 		.w(50%);
 		margin-right:0;
