--- a/template/book/forum/sidebar.htm
+++ b/template/book/forum/sidebar.htm
@@ -1,10 +1,10 @@
 <!-- jx3pve:分类导航 -->
 <h2 class="default-sidebar-title">分类导航<a class="u-more" href="./book" title="全部">全部</a></h2>
 <ul class="default-sidebar-content m-book-sort">
-    <li><a title="玩家回忆录" class="memoirs" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=360"><i></i>回忆录<em>your memoirs</em></a></li>
-    <li><a title="那些江湖传说" class="legend" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=361"><i></i>江湖传说<em>legend in jx3world</em></a></li>
-    <li><a title="剑三同人小说" class="fiction" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=358"><i></i>小说<em>fan fiction</em></a></li>
-    <li><a title="剑三剧情史记" class="plot" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=359"><i></i>剧情史记<em>jx3 history</em></a></li>
+    <li><a title="玩家回忆录" class="memoirs" href="./forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=360"><i></i>回忆录<em>your memoirs</em></a></li>
+    <li><a title="江湖传说818" class="legend" href="./forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=361"><i></i>江湖传说818<em>legend in jx3world</em></a></li>
+    <li><a title="剑三同人小说" class="fiction" href="./forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=358"><i></i>同人小说<em>fan fiction</em></a></li>
+    <li><a title="剑三剧情史记" class="plot" href="./forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=359"><i></i>剧情史记<em>jx3 history</em></a></li>
 </ul>
 
 <h2 class="default-sidebar-title">作品搜索</h2>
