--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -30,11 +30,11 @@
         </a></li>
         <li><a href="./snow">
             <i class="u-snow"><img src="http://img.jx3pve.com/img/system/sitemap/snow.png" alt="小雪读条皮肤"></i>
-            <span>读条皮肤</span><em></em>
+            <span>读条</span><em></em>
         </a></li>
         <li><a href="./story">
-            <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
-            <span>回忆录</span><em></em>
+            <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="故事"></i>
+            <span>故事</span><em></em>
         </a></li>
 
         <li class="u-locked"><a href="javascript:;">
@@ -67,7 +67,7 @@
         </a></li>
         <li><a href="./app/faceclean">
             <i class="u-faceclean"><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i>
-            <span>脸型清洗</span><em class="i-mark-new"></em>
+            <span>脸型清洗</span><em></em>
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-skilltree"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
