--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -34,7 +34,7 @@
         </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
-            <span>回忆录</span><em></em>
+            <span>故事</span><em></em>
         </a></li>
 
         <li class="u-locked"><a href="javascript:;">
