--- a/css/module/forum/viewthread/c-fli-meta.less
+++ b/css/module/forum/viewthread/c-fli-meta.less
@@ -105,11 +105,11 @@
 }
 
 //ipad
-.ua-mobile,.screen-m{
+/*.ua-mobile,.screen-m{
 	.c-fli-meta{
 		.u-view,.u-reply,.u-print{.none;}
 	}
-}
+}*/
 //mobile
 .ua-mobile,.screen-s{
 	.c-fli-meta{
