--- a/css/pvx/book/view.less
+++ b/css/pvx/book/view.less
@@ -1,5 +1,31 @@
 .m-book-view{
+	background-color:#fafafa;
+	border:1px solid #eee;
+	padding:10px;
+	.clearfix;
 	.e-book{
 		.fl;
+	}
+	.u-info{
+		margin-left:165px;
+	}
+	.u-info-item{
+		.db;
+		em{
+			color:#666;
+			.fl;
+			letter-spacing:20px;
+		}
+	}
+}
+.ua-mobile,.screen-s{
+	.m-book-view{
+		.e-book{
+			float:none;
+		}
+		.u-info{
+			margin-top:10px;
+			margin-left:0;
+		}
 	}
 }
