--- a/template/book/forum/custom_footer.htm
+++ b/template/book/forum/custom_footer.htm
@@ -1,1 +1,1 @@
-<!-- <script src="http://js.jx3pve.com/js/pvx/pvx-book.min.js"></script> -->
+<script src="http://js.jx3pve.com/js/pvx/pvx-book.min.js"></script>
