--- a/template/book/tpl/view.hbs
+++ b/template/book/tpl/view.hbs
@@ -6,9 +6,9 @@
 		</span>
 	</div>
 	<div class="u-info">
-		<a class="u-name" href="{subject_url}" data-target="_blank">{book_name_value}</a>
-		<span class="u-author">{book_author_value}</span>
-		<span class="u-time"><i></i>{lastedit}</span>
-		<p class="u-intro">{book_intro_value}</p>
+		<span class="u-info-item u-author"><em>作者</em><span>{book_author_value}</span></span>
+		<span class="u-info-item u-time"><em>发布</em><span class="u-book-dateline">{dateline}</span></span>
+		<span class="u-info-item u-time"><em>更新</em><span class="u-book-dateline">{lastedit}</span></span>
+		<p class="u-info-item u-intro"><em>摘要</em><span>{book_intro_value}</span></p>
 	</div>
 </div>
