--- a/template/default/app/sidebar.htm
+++ b/template/default/app/sidebar.htm
@@ -12,13 +12,13 @@
 
 <h2 class="default-sidebar-title">在线应用</h2>
 <ul class="default-sidebar-content app-list">
-	<li class="{if $topicid==106}on{/if}"><a href="./app/faceclean"><i><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i>脸型数据清洗</a></li>
-	<li class="{if $topicid==101}on{/if}"><a href="./app/servers"><i><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>开服监控与记录</a></li>
-	<!-- <li><a class="{if $topicid==107}on{/if}" href="./app/exam"><i><img src="http://img.jx3pve.com/img/app/sidebar/keju.png" alt="科举题库"></i>科举题库</a></li> -->
-	<li><a href="https://www.j3pz.com" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>在线配装</a></li>
-	<li><a href="https://www.j3pz.com/tools/haste/" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>加速宝典</a></li>
-	<li><a href="http://www.j3ui.com/wiki" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>成就百科</a></li>
-	<li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>游戏数据</a></li>
+	<li class="{if $topicid==106}on{/if}"><a href="./app/faceclean"><i><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i><span>脸型数据清洗</span></a></li>
+	<li class="{if $topicid==101}on{/if}"><a href="./app/servers"><i><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i><span>开服监控与记录</span></a></li>
+	<!-- <li><a class="{if $topicid==107}on{/if}" href="./app/exam"><i><img src="http://img.jx3pve.com/img/app/sidebar/keju.png" alt="科举题库"></i><span>科举题库</a></li> -->
+	<li><a href="https://www.j3pz.com" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i><span>在线配装</span></a></li>
+	<li><a href="https://www.j3pz.com/tools/haste/" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i><span>加速宝典</span></a></li>
+	<li><a href="http://www.j3ui.com/wiki" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i><span>成就百科</span></a></li>
+	<li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank"><i><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i><span>游戏数据</span></a></li>
 </ul>
 
 <!--{if $_GET['typeid']==398}-->
