--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="./bbs">
             <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
-            <span>交流</span><em></em>
+            <span>广场</span><em></em>
         </a></li>
         <li><a href="./macro">
             <i class="u-macro"><img src="http://img.jx3pve.com/img/system/sitemap/macro.png" alt="剑三宏"></i>
@@ -18,7 +18,7 @@
         </a></li>
         <li><a href="./fam">
             <i class="u-fam"><img src="http://img.jx3pve.com/img/system/sitemap/fam.png" alt="副本攻略"></i>
-            <span>副本</span><em class="i-mark-hot"></em>
+            <span>副本</span><em></em>
         </a></li>
         <li><a href="./face">
             <i class="u-face"><img src="http://img.jx3pve.com/img/system/sitemap/face.png" alt="捏脸数据"></i>
@@ -28,22 +28,13 @@
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物攻略"></i>
             <span>宠物</span><em></em>
         </a></li>
-        <li><a href="./snow">
-            <i class="u-snow"><img src="http://img.jx3pve.com/img/system/sitemap/snow.png" alt="小雪读条皮肤"></i>
-            <span>读条</span><em></em>
+        <li class="u-locked"><a href="javascript:;">
+            <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+            <span>媒体库</span><em></em>
         </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="故事"></i>
             <span>故事</span><em></em>
-        </a></li>
-
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-qixue"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt="奇穴模拟器"></i>
-            <span>奇穴模拟器</span><em></em>
-        </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-golden"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>未开启</span><em></em>
         </a></li>
         <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
@@ -69,23 +60,6 @@
             <i class="u-faceclean"><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i>
             <span>脸型清洗</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-skilltree"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>未开启</span><em></em>
-        </a></li>
-        
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-computer"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>未开启</span><em></em>
-        </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-wall"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>未开启</span><em></em>
-        </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-emot"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>未开启</span><em></em>
-        </a></li>
         <li><a href="./team" >
             <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
             <span>招募</span><em></em>
@@ -106,7 +80,10 @@
             <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
             <span>竞技</span><em></em>
         </a></li>
-
+        <li class="u-locked"><a href="javascript:;">
+            <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+            <span>周边</span><em></em>
+        </a></li>
         <li class="u-more"><a href="./sitemap">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
         </a></li>
