--- a/css/pve/tool/sidebar.less
+++ b/css/pve/tool/sidebar.less
@@ -43,13 +43,33 @@
 		background:url('@{url}tool/design.png') no-repeat 0 0;
 	}
 }
-.app-list{
+.default-sidebar-content.app-list{
+	.clearfix;
+	li{
+		.fl;
+		margin-right:5px;
+	}
+	.on{
+		a{
+			border:1px solid #c00;
+		}
+	}
+	a{
+		box-shadow: 0 0 1px rgba(0,0,0,0.2);
+		border:1px solid #ccc;
+		padding:3px;
+		.r(2px);
+	}
 	i{
+		margin-right:0;
 		img{
 			.db;
 			max-width:100%;
 			max-height:100%;
 		}
+	}
+	span{
+		.none;
 	}
 	a:hover{
 		color:@blue-link;
