--- a/css/pvx/book/common.less
+++ b/css/pvx/book/common.less
@@ -1,23 +1,31 @@
+@e-book-w:145px;
+@e-book-h:190px;
 .e-book{
 	.book{
 		//书本区
+		.size(@e-book-w,@e-book-h);
+		box-shadow: 1px 1px 1px rgba(0,0,0,.2);
 		.db;.pr;background-color:#fff;
-		transition:0.3s ease-in-out;
+		overflow:hidden;
+		transition:0.2s ease-in-out;
 		//图片
 		.img{
-			.db;
-			//margin:0 1px 1px 1px;
+			.db;.size(100%);
+			-webkit-filter: brightness(100%) saturate(100%);
+			transition:0.2s ease-in-out;
 		}
 		//立体遮罩
 		.layout{
 			.pa;.lt(0,0);
 			.full;
 			.tm(0.4);
+			background:url('@{url}book/book-layout.png') no-repeat 0 0;
 		}
 		//右下
 		.til,.author{
 			.db;.pa;.rb(1px,1px);
-			.tb(0,0,0,.5);
+			//.tb(0,0,0,.5);
+			background:url('@{url}common/alp50.png') repeat 0 0;
 			.fzlh(12px,24px);
 			padding:0 5px;
 			max-width:110px;
@@ -25,33 +33,53 @@
 			color:#eee;
 			//.x;
 		}
+		//名字
+		.u-name{
+			.db;.pa;.lb(0,0);
+			.nobreak;
+			.size(100%,30px);line-height:30px;
+			padding:0 5px;box-sizing:border-box;
+			.tb(0,0,0,.5);
+			.x(right);
+			color:#fff;
+			transform:translateY(100%);
+			transition:0.3s ease-in-out;
+		}
+		&:hover{
+			.img{
+				-webkit-filter: brightness(105%) saturate(110%);
+			}
+			.u-name{
+				transform:translateY(0%);
+			}
+		}
 		//默认封面
 		//小说
 		&.type-358{
-			background:url('@{url}book/type1-1.png') no-repeat 0 0;
+			background:url('@{url}book/type1-2.png') no-repeat 0 0;
 			&:hover{
-				background:url('@{url}book/type1-2.png') no-repeat 0 0;
+				background:url('@{url}book/type1-1.png') no-repeat 0 0;
 			}
 		}
 		//剧情
 		&.type-359{
-			background:url('@{url}book/type2-1.png') no-repeat 0 0;
+			background:url('@{url}book/type2-2.png') no-repeat 0 0;
 			&:hover{
-				background:url('@{url}book/type2-2.png') no-repeat 0 0;
+				background:url('@{url}book/type2-1.png') no-repeat 0 0;
 			}
 		}
 		//回忆录
 		&.type-360{
-			background:url('@{url}book/type3-1.png') no-repeat 0 0;
+			background:url('@{url}book/type3-2.png') no-repeat 0 0;
 			&:hover{
-				background:url('@{url}book/type3-2.png') no-repeat 0 0;
+				background:url('@{url}book/type3-1.png') no-repeat 0 0;
 			}
 		}
 		//江湖传说
 		&.type-361{
-			background:url('@{url}book/type4-1.png') no-repeat 0 0;
+			background:url('@{url}book/type4-2.png') no-repeat 0 0;
 			&:hover{
-				background:url('@{url}book/type4-2.png') no-repeat 0 0;
+				background:url('@{url}book/type4-1.png') no-repeat 0 0;
 			}
 		}
 		//角标
@@ -72,44 +100,15 @@
 		.mark-3{
 			background-position:0 -85px;
 		}
-		&:hover{
-			-webkit-filter: brightness(105%) saturate(110%);
-		}
 	}
 }
-
-.e-book{
-	@e-book-w:145px;
-	@e-book-h:190px;
-	.book{
-		.size(@e-book-w,@e-book-h);
-		box-shadow: 1px 1px 1px rgba(0,0,0,.2);
-		.img{
-			.size(100%);
-		}
-		.layout{
-			background:url('@{url}book/book-layout.png') no-repeat 0 0;
-		}
-
-	}
-}
-
-.e-book-s{
-	@e-book-w:120px;
-	@e-book-h:158px;
-	.book{
-		.size(@e-book-w,@e-book-h);
-		.img{
-			.size(@e-book-w - 2px,@e-book-h - 1px);
-		}
-		.layout{
-			background:url('@{url}book/book-layout-s.png') no-repeat 0 0;
-		}
-	}
-}
-
 .e-book-shadow{
 	//background:url('@{url}book/book-shadow.png') no-repeat 9px 4px;
 	//padding:20px;
 }
 
+.ie8 .e-book{
+	.layout{
+		filter:none;
+	}
+}
