--- a/css/pvx/book/list.less
+++ b/css/pvx/book/list.less
@@ -26,6 +26,9 @@
 		//.pa;.lt(0,0);
 		.fl;
 	}
+	.u-name{
+		.bold;color:#454545;
+	}
 	.u-info{
 		margin-left:145px + 10px;
 		.db;//.x(right);
@@ -62,7 +65,7 @@
 
 
 }
-
+.w-listfilter-list .u-sort{.none;}
 .ua-mobile,.screen-s {
 	.m-book-list{
 		padding-top:0;
@@ -76,6 +79,7 @@
 			float:none;
 			overflow:hidden;
 			font-size:13px;
+			margin-bottom:10px;
 		}
 	}
 }
