--- a/css/pvx/face/view.less
+++ b/css/pvx/face/view.less
@@ -143,40 +143,42 @@
 	}
 }
 
-.ua-responsive .screen-s .m-face-view{
-	.m-default{
-		min-height:auto;
-	}
-	.m-short{
-		.ps;
-		.w(100%);
-		height:auto;
-		padding:0;
-		margin:0;
-	}
-	.m-short .img:after{
-		.none;
-	}
-	.m-info{
-		margin:0;
-	}
-	.m-details{
-		float:none;
-		.w(auto);
-	}
-	.m-down{
-		float:none;
-		.u-btn-facedown{.auto(x);}
-	}
-	.u-wb{
-		.none;
-	}
+.ua-mobile,.screen-s{
+	.m-face-view{
+		.m-default{
+			min-height:auto;
+		}
+		.m-short{
+			.ps;
+			.w(100%);
+			height:auto;
+			padding:0;
+			margin:0;
+		}
+		.m-short .img:after{
+			.none;
+		}
+		.m-info{
+			margin:0;
+		}
+		.m-details{
+			float:none;
+			.w(auto);
+		}
+		.m-down{
+			float:none;
+			.u-btn-facedown{.auto(x);}
+		}
+		.u-wb{
+			.none;
+		}
 
-	.m-clean{
-		.none;
-	}
-	.m-extend .minipic li{
-		.auto(x);
-		float:none;
+		.m-clean{
+			.none;
+		}
+		.m-extend .minipic li{
+			.auto(x);
+			float:none;
+		}
 	}
 }
