Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/module/common/c-compass.less
+++ b/css/module/common/c-compass.less
@@ -48,10 +48,9 @@
 		}
 	}
 	.u-locked{
-		.tm(0.5);
+		*{.tm(0.5);cursor:default;}
 		span{color:#888;}
 		cursor:default;
-		*{cursor:default;}
 		//.none;
 	}
 	.u-hide{
