--- a/css/pvx/game/sidebar.less
+++ b/css/pvx/game/sidebar.less
@@ -56,12 +56,12 @@
 		}
 	}
 }
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.default-sidebar{
-		.db;
-		.ps;
+		.none;
 	}
 	.m-game-list{
+		padding:0 10px;
 		margin-bottom:10px;
 		li{.w(40%);}
 		a{.w(100%);.h(60px);background-size:auto 80%;}
