--- a/template/default/common/menu.htm
+++ b/template/default/common/menu.htm
@@ -6,7 +6,7 @@
 		<li class="{if $_G[fid]=='384'}on{/if}"><a href="./role">职业</a></li>
 		<li class="{if $_G[fid]=='369'}on{/if}"><a href="./fam">副本</a></li>
 		<li class="{if $_G[fid]=='92'}on{/if}"><a href="./face">捏脸</a></li>
-		<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">交流</a></li>
+		<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">广场</a></li>
 		<li class="{if $_GET['topicid'] == '110'}on{/if}"><a id="c-header-menu-moretg" href="./sitemap">更多</a></li>
 	</ul>
 	<!-- <ul class="c-header-menu-extend" style="display:none;">
