--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -24,10 +24,6 @@
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物攻略"></i>
             <span>宠物</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>媒体库</span><em></em>
-        </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
             <span>故事</span><em></em>
@@ -76,9 +72,9 @@
             <i class="u-petmap"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
             <span>未开启</span><em></em>
         </a></li>
-        <li><a href="./ow">
-            <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
-            <span>竞技</span><em></em>
+        <li class="u-hide"><a href="javascript:;">
+            <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+            <span>媒体库</span><em></em>
         </a></li>
         <li class="u-locked"><a href="javascript:;">
             <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
