--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -28,13 +28,13 @@
             <i class="u-pet"><img src="http://img.jx3pve.com/img/system/sitemap/pet.png" alt="宠物攻略"></i>
             <span>宠物</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>媒体库</span><em></em>
-        </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="故事"></i>
             <span>故事</span><em></em>
+        </a></li>
+        <li class="u-locked"><a href="javascript:;">
+            <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+            <span>周边</span><em></em>
         </a></li>
         <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
@@ -80,9 +80,9 @@
             <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
             <span>竞技</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
-            <span>周边</span><em></em>
+        <li class="u-hide"><a href="javascript:;">
+            <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+            <span>媒体库</span><em></em>
         </a></li>
         <li class="u-more"><a href="./sitemap">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
