Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/game/ow.less
+++ b/css/pvx/game/ow.less
@@ -171,6 +171,10 @@
 	.m-ow-item-th{.none !important;}
 	.m-ow-item,.m-ow-item .u-subitem{height:auto;}
 	.m-ow-item{
+		background-color:#fff;
+		padding:10px;
+		border-bottom:none;
+		margin-bottom:10px;
 		.u-hero,.u-fwq{
 			.w(100%);
 			.clear(left);
