--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -84,6 +84,10 @@
             <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
             <span>广场</span><em></em>
         </a></li>
+        <li><a href="./ow">
+            <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
+            <span>竞技</span><em></em>
+        </a></li>
         <!-- when mobile click show all , pc show all default -->
         <li class="u-more"><a href="javascript:;">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
@@ -99,6 +103,22 @@
         <li class="u-old"><a href="./forum-415-1.html">
             <i class="u-wujia"><img src="http://img.jx3pve.com/img/system/sitemap/wujia.png" alt="五甲捷报"></i>
             <span>五甲捷报</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./team" >
+            <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
+            <span>招募</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./member">
+            <i class="u-member"><img src="http://img.jx3pve.com/img/system/sitemap/member.png" alt="团员找团"></i>
+            <span>找团</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./biz-sale">
+            <i class="u-sale"><img src="http://img.jx3pve.com/img/system/sitemap/sale.png" alt="出售信息"></i>
+            <span>出售</span><em class="i-mark-stop"></em>
+        </a></li>
+        <li class="u-old"><a href="./biz-buy">
+            <i class="u-buy"><img src="http://img.jx3pve.com/img/system/sitemap/buy.png" alt="求购信息"></i>
+            <span>求购</span><em class="i-mark-stop"></em>
         </a></li>
         <li class="u-old"><a href="./group.php">
             <i class="u-group"><img src="http://img.jx3pve.com/img/system/sitemap/group.png" alt="群组"></i>
