--- a/template/yylmacro/portal/portal_topic_test.htm
+++ b/template/yylmacro/portal/portal_topic_test.htm
@@ -1,38 +1,20 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index-v7.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index-v8.css" type="text/css" />
 <div class="index-container">
     <div class="wp">
         
         <div class="index-content">
-            <div class="m-index-content-wrapper">
-                <div class="m-index-zt">
-                    <!--{block/1817}-->
-                </div>
 
-                <div class="m-index-news">
-                    <h2 class="m-index-title">
-                        <a class="u-title on" href="javascript:;"><i class="u-ico"></i>干货推荐<span class="u-divding"> | </span></a>
-                        <a class="u-title" href="javascript:;">PVE动态<span class="u-divding"> | </span></a>
-                        <a class="u-title" href="javascript:;">PVX动态<span class="u-divding"> | </span></a>
-                        <a class="u-title" href="javascript:;">江湖动态</a>
-                        <a class="u-add" href="./push"><i></i>推送</a>
-                    </h2>
-                    <div class="m-index-list on">
-                        <!--{block/1805}-->
-                    </div>
-                    <div class="m-index-list">
-                        <!--{block/1818}-->
-                    </div>
-                    <div class="m-index-list">
-                        <!--{block/1736}-->
-                    </div>
-                    <div class="m-index-list">
-                        <!--{block/1737}-->
-                    </div>
-                </div>
+            <div class="m-index-slider">
+                <!--{block/1733}-->
             </div>
 
-            <!--{template jx3pve/c_compass}-->
+            <!--{template jx3pve/c_compass_mini}-->
+
+            <div class="m-index-news">
+                <!--{block/1805}-->
+            </div>
+
         </div>
 
         <div class="index-sidebar">
@@ -53,12 +35,19 @@
 
             <div class="m-index-wxcode">
                 <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt="剑网3PVE微信公众号"></span>
-                <p>扫一扫关注微信公众号<br><b>剑网3PVE</b></p>
+                <p>扫一扫关注微信公众号</p>
             </div>
-
         </div>
     </div>
 </div>
 
-<script src="http://js.jx3pve.com/js/page/page-index.js"></script>
+<!--{if $_G['mobile']}-->
+
+<!--{else}-->
+
+<!--{/if}-->
+
+
+<script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
+<script src="http://js.jx3pve.com/js/page/page-index.min.js"></script>
 <!--{template common/footer}-->
