Signed-off-by: unknown <17229398@qq.com>

--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -48,7 +48,7 @@
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
             <span>成就</span><em></em>
         </a></li>
-        <li class="u-link"><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
+        <li class="u-link"><a href="https://haimanchajian.com/data/jx3" target="_blank">
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
             <span>数据</span><em></em>
         </a></li>
