微信功能改进

--- a/css/module/ui/verif.less
+++ b/css/module/ui/verif.less
@@ -1,4 +1,4 @@
-.u-verf-raid,.u-verf-leader,.u-verf-girl,.u-verf-player,.u-verf-author{
+.u-verf-raid,.u-verf-leader,.u-verf-girl,.u-verf-player,.u-verf-author,.u-verf-wx{
 	.size(16px);.dbi;.y;
 }
 
@@ -7,3 +7,4 @@
 .u-verf-girl{background:url('@{url}verif/girl.png') no-repeat 0 0;}
 .u-verf-player{background:url('@{url}verif/player.png') no-repeat 0 0;}
 .u-verf-author{background:url('@{url}verif/author.png') no-repeat 0 0;}
+.u-verf-wx{background:url('@{url}verif/wx.png') no-repeat 0 0;}
