--- a/template/yylmacro/home/3.资料/spacecp_profile.htm
+++ b/template/yylmacro/home/3.资料/spacecp_profile.htm
@@ -156,7 +156,9 @@
 											<p class="tbms mtm {if !$showbtn}tbms_r{/if}">
 												<!--{if $showbtn}-->
 														<div class="user-profile-verif-ac"><!--{block/448}--></div>
-													<!--{if $_GET['vid']=="5"}-->
+													<!--{if $_GET['vid']=="6"}-->
+														<div class="user-profile-verif-tips"><!--{block/1825}--></div>
+													<!--{elseif $_GET['vid']=="5"}-->
 														<div class="user-profile-verif-tips"><!--{block/1794}--></div>
 													<!--{elseif $_GET['vid']=="4"}-->
 														<div class="user-profile-verif-tips"><!--{block/1795}--></div>
