--- a/css/index/index-v8/content.less
+++ b/css/index/index-v8/content.less
@@ -18,7 +18,7 @@
 		}
 		.u-pic{
 			.db;
-			.size(160px,90px);
+			.size(142px,80px);
 		}
 		.u-mark{
 			.pa;.rt(0,0);
@@ -26,7 +26,7 @@
 		}
 		.u-info{
 			.db;
-			margin-left:160px + 10px;
+			margin-left:160px;
 		}
 		.u-title{
 			.db;
