微信红包/各类修订

--- a/template/yylmacro/member/login.htm
+++ b/template/yylmacro/member/login.htm
@@ -190,7 +190,8 @@
 						<span class="none"><!--{hook/register_logging_method}--></span>
 						<a class="u-qq" href="http://www.jx3pve.com/connect.php?mod=login&amp;op=init&amp;referer=http%3A%2F%2Fwww.jx3pve.com%2F.%2F&amp;statfrom=login" rel="nofollow"><i></i><img src="http://img.jx3pve.com/static/image/common//qq_login.gif" class="vm"></a>
 						<a class="u-weibo" href="mpage_weibo-login.html"><i></i><img src="source/plugin/mpage_weibo/image/sina_login_btn.png" class="vm" alt="用新浪微博登录"></a>
-						<a class="u-weixin" href="wechat-login.html"><i></i><img src="http://img.jx3pve.com/img/user/wechat_login.png" alt="微信登录" class="vm"></a>
+						<!-- <a class="u-weixin" href="wechat-login.html"><i></i><img src="http://img.jx3pve.com/img/user/wechat_login.png" alt="微信登录" class="vm"></a> -->
+						<a class="u-weixin" href="javascript:;" onclick="showWindow('hux_wx','plugin.php?id=hux_wx:hux_wx&mod=login&ac=tologin');return false;"><i></i><img src="http://img.jx3pve.com/img/user/wechat_login.png" alt="微信登录" class="vm"></a>
 					</p>
 				</div>
 			</div>
