--- a/css/index/bbs.less
+++ b/css/index/bbs.less
@@ -37,19 +37,33 @@
 		.u-ask i{
 			background:url('@{url}bbs/ask.png') no-repeat 0 0;
 		}
+		.u-book i{
+			background:url('@{url}bbs/book.png') no-repeat 0 0;
+		}
+		.u-computer i{
+			background:url('@{url}bbs/computer.png') no-repeat 0 0;
+		}
 		.u-discuz i{
 			background:url('@{url}bbs/discuz.png') no-repeat 0 0;
 		}
 		.u-share i{
-			background:url('@{url}bbs/share.png') no-repeat 0 0;
+			background:url('@{url}bbs/cube.png') no-repeat 0 0;
 		}
 		.u-ac i{
 			background:url('@{url}bbs/ac.png') no-repeat 0 0;
 		}
+		.u-biz i{
+			background:url('@{url}bbs/biz.png') no-repeat 0 0;
+		}
 	}
 }
 
-
+.ua-mobile,.screen-s{
+	.w-mode-category-list .u-item .vm{
+		margin-top:(32px - 24px)/2;
+		margin-right:10px;
+	}
+}
 
 
 
@@ -102,6 +116,3 @@
     border-radius: 6px;
 }
 
-.pg_forumdisplay .i-header-menu .u-all{
-	.none;
-}
