--- a/css/index/index-v8/content.less
+++ b/css/index/index-v8/content.less
@@ -19,6 +19,7 @@
 		.u-pic{
 			.db;
 			.size(142px,80px);
+			.r(3px);
 		}
 		.u-mark{
 			.pa;.rt(0,0);
@@ -46,7 +47,12 @@
 	}
 }
 .ua-mobile,.screen-s{
-	.m-index-news ul .u-desc{
-		.none;
+	.m-index-news ul {
+		.u-desc{
+			.none;
+		}
+		.u-pic{
+			.r(0);
+		}
 	}
 }
