--- a/template/yylmacro/forum/sidebar.htm
+++ b/template/yylmacro/forum/sidebar.htm
@@ -1,10 +1,10 @@
 <!-- jx3pve:分类导航 -->
 <h2 class="default-sidebar-title">分类导航<a class="u-more" href="./bbs" title="全部">全部</a></h2>
 <ul class="default-sidebar-content m-bbs-nav">
-	<li {if ($_GET['typeid']==2)} class="on"{/if}><a class="u-ask" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=2&orderby=lastedit"><i></i>求助<em>Ask</em></a></li>
-	<li {if ($_GET['typeid']==326)} class="on"{/if}><a class="u-discuz" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=326&orderby=lastedit"><i></i>讨论<em>Discuz</em></a></li>
+	<li {if ($_GET['typeid']==402)} class="on"{/if}><a class="u-book" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=402&orderby=lastedit"><i></i>攻略<em>Technique</em></a></li>
 	<li {if ($_GET['typeid']==327)} class="on"{/if}><a class="u-share" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=327&orderby=lastedit"><i></i>分享<em>Share</em></a></li>
-	<li {if ($_GET['typeid']==333)} class="on"{/if}><a class="u-ac" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=333&orderby=lastedit"><i></i>公告<em>AC</em></a></li>
+	<li {if ($_GET['typeid']==403)} class="on"{/if}><a class="u-computer" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=403&orderby=lastedit"><i></i>硬件<em>Computer</em></a></li>
+	<li {if ($_GET['typeid']==404)} class="on"{/if}><a class="u-biz" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=404&orderby=lastedit"><i></i>交易<em>Biz</em></a></li>
 </ul>
 
 
