--- a/css/index/index-v8/sidebar.less
+++ b/css/index/index-v8/sidebar.less
@@ -15,8 +15,9 @@
 	a{.db;.x;}
 	.u-title{.fz(16px);.color(@blue-link,#c00);}
 	.u-desc{.color(#666,#c00);}
+	.u-mark{.size(58px);}
 
-	.none;
+	//.none;
 }
 
 .m-index-my{
@@ -100,9 +101,12 @@
 }
 
 .m-index-wxcode{
-	.x;
-	background:#fcfcfc;
-	padding:20px 0;
-	.u-img{.db;.auto(x);}
-	b{/*.color(@blue-link);*/.bold;}
+	//.x;
+	//background:#fcfcfc;
+	//padding:20px 0;
+	//.u-img{.db;.auto(x);}
+	//b{/*.color(@blue-link);*/.bold;}
+	.u-img{.db;}
+	img{.db;padding:10px;}
+	p{text-indent:18px;}
 }
