--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -34,7 +34,7 @@
             </div>
 
             <div class="m-index-wxcode">
-                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt="剑网3PVE微信公众号"></span>
+                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_148.png" alt="剑网3PVE微信公众号"></span>
                 <p>扫一扫关注微信公众号</p>
             </div>
         </div>
