--- a/css/index/index-v8/mobile.less
+++ b/css/index/index-v8/mobile.less
@@ -6,29 +6,7 @@
 	.index-content,.index-sidebar{
 		float:none;.w(auto);
 	}
-	.m-index-my,.m-index-os,.c-compass{
+	.index-sidebar,.c-compass{
 		.none;
-	}
-
-	.m-index-ac{
-		h2 a{
-			.bold;
-			//color:@blue-link;
-			//i{background-position:0 -16px;}
-		}
-	}
-
-	.m-index-zt{
-		float:none;.w(auto);
-		ul{border-bottom:none;}
-		li{.w(50%);.fl;border-bottom:1px solid #eee;}
-		margin-bottom:12px;
-	}
-
-	.m-index-news{
-		margin-bottom:20px;
-		li{
-			padding:10px;
-		}
 	}
 }
