Signed-off-by: iRuxu <17229398@qq.com>

--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -76,8 +76,8 @@
             <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
             <span>媒体库</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+        <li class="u-shop"><a href="http://www.candy-lab.com" target="_blank">
+            <i class="u-shop"><img src="http://img.jx3pve.com/img/system/sitemap/shop.png" alt=""></i>
             <span>周边</span><em></em>
         </a></li>
         <li><a href="./bbs">
