--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -32,8 +32,8 @@
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="故事"></i>
             <span>故事</span><em></em>
         </a></li>
-        <li class="u-locked"><a href="javascript:;">
-            <i class="u-gift"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
+        <li class="u-shop"><a href="http://www.candy-lab.com" target="_blank">
+            <i class="u-shop"><img src="http://img.jx3pve.com/img/system/sitemap/shop.png" alt=""></i>
             <span>周边</span><em></em>
         </a></li>
         <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
